# opengoat

./: --full-page  --fullPage  --viewport  --width  .dockerignore  .gitignore  .npmignore  .npmrc  ABOUT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  VERSION  check_semver.js  docker-compose.yml  index.ts  openclaw.plugin.json  opengoat.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.changeset/: five-foxes-wave.md  flat-walls-ring.md  fresh-suns-fly.md  khaki-geese-kiss.md  olive-oranges-applaud.md  real-schools-brake.md  release-2026-02-14.md  release-2026-2-14-2.md  release-calver.md  sweet-candles-prove.md  temporary-cron-sessions.md
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs  state.rs
apps/desktop/src-tauri/src/commands/: bootstrap.rs  chat.rs  mod.rs
config/: app-manifest.json
docker/: entrypoint.sh
docs/: acp.md  docker.md  docs.json  electron-app.md  electron-architecture-review.md  gateway.md  index.mdx  orchestration-flow.md  organization-runtime.md  product-roadmap.md  releases.md
scripts/: dev-browser.mjs  release.mjs  smoke-packed-cli.sh  sync-version.mjs  validate-macos-bundle.sh
src/: index.ts
test/: messaging-bridge.service.test.ts  messaging-connection.service.test.ts  messaging-gateway-adapter.test.ts  messaging-router.service.test.ts  (+7 more)
(+740 files in other folders)
