[workspace]
members = ["apps/desktop/src-tauri"]
resolver = "3"

[workspace.package]
authors = ["OpenGoat"]
edition = "2024"
license = "Proprietary"
rust-version = "1.94"
version = "2026.4.7-2"

[workspace.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = "2.10.3"
tauri-build = "2.5.6"
tokio = { version = "1.50.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.22.0", features = ["v4"] }
