[package]
name = "opengoat-desktop"
version.workspace = true
description = "OpenGoat desktop application"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "opengoat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json = "1.0.145"
tauri.workspace = true
tauri-plugin-opener = "2.5.3"
tokio.workspace = true
uuid.workspace = true
